--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "bin": {
     "img-zoom": "bin/index.js"
   },
-  "version": "0.0.1",
+  "version": "0.0.2",
   "keywords": [
     "image cropping",
     "img compression"
@@ -15,9 +15,8 @@
   "bugs": {
     "url": "https://github.com/MaLuns/img-zoom/issues"
   },
-  "license": "MIT",
+  "license": "Apache-2.0",
   "dependencies": {
-    "@types/prompts": "^2.4.9",
     "chalk": "^4.1.2",
     "fs-extra": "^11.2.0",
     "log4js": "^6.9.1",
@@ -26,6 +25,7 @@
   },
   "devDependencies": {
     "@types/fs-extra": "^11.0.4",
-    "@types/node": "^22.7.5"
+    "@types/node": "^22.7.5",
+    "@types/prompts": "^2.4.9"
   }
 }
